--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.4.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
